--- a/style1.css
+++ b/style1.css
@@ -412,11 +412,12 @@ ul {
 }
 
 #progress {
-  width : 600px;
+  width : 850px;
   background-color: #000;
 }
 
 #GoldRush {
+  transition: 0.3s ease-out;
   width: 0px;
   height: 30px;
   background-color: #04AA6D;
